Add seeder script and update package.json; make positionToParent optional in Member model

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon server.js",
     "migrate": "npx prisma migrate dev",
     "generate": "npx prisma generate",
+    "seed": "node src/seeders/seeder.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
